# nvda-stock-visualizer

./: .gitignore  README.md  WARP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cache/: NVDA_1y_1d.parquet
.github/workflows/: ci.yml
src/: __init__.py  cli.py  config.py  data_fetcher.py  plot_nvda.py  report_generator.py  statistical_analysis.py  technical_indicators.py  visualizer.py
tests/: __init__.py  test_data_fetcher.py  test_indicators.py  test_plot_nvda.py  test_statistics.py
